force-app/main/default/objects/Swarm_Usage_Log__c/Swarm_Usage_Log__c.object-meta.xml
<CustomObject>
    <description>One row per Case Swarm Chat session, logged when the user clicks "Clear swarm data". Counts are tracked client-side in the LWC for that browser session only - see swarmUsageTracker.js - so they reflect what that tab observed, not an authoritative Azure/Graph-side audit.</description>
    <label>Swarm Usage Log</label>
    <nameField>
        <displayFormat>SUL-{00000000}</displayFormat>
        <label>Swarm Usage Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Swarm Usage Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>