force-app/main/default/objects/Swarm_Usage_Log__c/fields/Apex_Fallback_Count__c.field-meta.xml
<CustomField>
    <fullName>Apex_Fallback_Count__c</fullName>
    <description>Number of times this session used the old Apex syncMessages/sendMessage Graph-polling path instead of the Azure bridge (useAzureBridge was false) - each of these does count as a Salesforce Apex callout, unlike the Azure-bridge path.</description>
    <label>Apex Fallback Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>