force-app/main/default/objects/Swarm_Usage_Log__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Case this swarm session belonged to.</description>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Swarm Usage Logs</relationshipLabel>
    <relationshipName>Swarm_Usage_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>