force-app/main/default/objects/Swarm_Usage_Log__c/fields/History_Poll_Count__c.field-meta.xml
<CustomField>
    <fullName>History_Poll_Count__c</fullName>
    <description>Number of successful Azure chatHistory calls observed by the browser during this session - 1:1 with Azure Function executions and Microsoft Graph GET /chats/{id}/messages calls for that path.</description>
    <label>History Poll Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>