force-app/main/default/objects/Swarm_Usage_Log__c/fields/Rate_Limited_Count__c.field-meta.xml
<CustomField>
    <fullName>Rate_Limited_Count__c</fullName>
    <description>Number of times chatHistory returned 429 (Graph's 10-requests/10-seconds throttle) during this session, triggering the LWC's backoff.</description>
    <label>Rate Limited Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>