force-app/main/default/objects/Swarm_Usage_Log__c/fields/Send_Count__c.field-meta.xml
<CustomField>
    <fullName>Send_Count__c</fullName>
    <description>Number of successful Azure chatSend calls observed by the browser during this session - 1:1 with Azure Function executions and Bot Framework Connector calls for that path.</description>
    <label>Send Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>