force-app/main/default/objects/Swarm_Usage_Log__c/fields/Session_Started_At__c.field-meta.xml
<CustomField>
    <fullName>Session_Started_At__c</fullName>
    <description>When the browser first started tracking usage for this swarm session (first poll/send/fallback observed), not necessarily when the swarm itself was created.</description>
    <label>Session Started At</label>
    <type>DateTime</type>
</CustomField>