force-app/main/default/objects/Swarm_Usage_Log__c/fields/Swarm_Chat_Id__c.field-meta.xml
<CustomField>
    <fullName>Swarm_Chat_Id__c</fullName>
    <description>Copy of Case.Swarm_Team_Id__c (the Teams chat/group id) at the time this swarm was cleared - kept for reference since the Case field itself gets nulled.</description>
    <label>Swarm Chat Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>