force-app/main/default/objects/Swarm_Usage_Log__c/fields/Swarm_Type__c.field-meta.xml
<CustomField>
    <fullName>Swarm_Type__c</fullName>
    <description>Copy of Case.Swarm_Type__c at the time the swarm was cleared (Chat or Team).</description>
    <label>Swarm Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>